# symptom-checker

./: LICENSE  README.md
data/processed/: disease_orpha_code_to_name.json  frequencies.json  symptom_id_to_name.json
pipeline/: model.py  parse_dataset.py
symptom-checker-service/: pyproject.toml
symptom-checker-service/symptom_checker_service/: app.py
symptom-checker-service/tests/: test_symptom_checker_service.py
